fixes popup menu initial positioning
I needed to position the menu somewhere where it wouldn't get out of the screen, but I still needed to calculate its position with its initial offset, so I saved it in a state variable.
So now the horizontal scrollbar doesn't appear for an instant after opening the menu

--- a/src/styles/popupmenu.css
+++ b/src/styles/popupmenu.css
@@ -11,7 +11,9 @@
     z-index: 10;
 }
 .popup-menu.hidden {
-    display: none;
+    top: 0;
+    left: 0;
+    visibility: hidden;
 }
 .popup-menu.left {
     transform: translateX(-100%);
